--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
+            <scope>provided</scope>
         </dependency>
         <!-- MySQL -->
         <dependency>
